tests/ui/validate_no_args.stderr
error: Illegal syntax for attribute validate
 --> $DIR/validate_no_args.rs:5:4
  |
5 |     #[validate]
  |       ^^^^^^^^
